fixed more spacing issues, added audio

--- a/style.css
+++ b/style.css
@@ -76,6 +76,10 @@ h1 {
   /* text-shadow: -1px -1px #000000; */
 }
 
+h2 {
+  font-size: 18.72px;
+}
+
 fieldset {
   text-align: left;
   border: 0;
@@ -92,6 +96,17 @@ input {
   cursor: pointer;
 }
 
+input[type='radio']:checked:after {
+  background-color: #8f7143;
+  content: '';
+  visibility: visible;
+}
+
+label {
+  margin-left: 5px;
+  line-height: 1.5;
+}
+
 label:hover {
   cursor: pointer;
 }
@@ -105,6 +120,7 @@ button {
   font-family: 'Special Elite', cursive;
   text-shadow: 0px 1px 1px #808080;
   font-size: 1em;
+  margin-top: 15px;
   margin-bottom: 30px;
   overflow: hidden;
   outline: none;
@@ -186,6 +202,10 @@ img {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 3em;
+  }
+
+  h2 {
+    font-size: 24px;
   }
 }
 
